--- a/kubernetes/vpro-app/vproingress.yaml
+++ b/kubernetes/vpro-app/vproingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: vprofile.thehkh.com
+  - host: shafikulislam.xyz
     http:
       paths:
       - path: /
