--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up SonarQube
         uses: SonarSource/sonarqube-scan-action@v1.0.0
         with:
-          host-url: ${{ secrets.SONAR_HOST_URL }}
+          host-url: ${{ secrets.SONAR_URL }}
           login: ${{ secrets.SONAR_TOKEN }}
 
       # Run sonar-scanner
