--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,77 +1,3 @@
-# name: vprofile actions
-# on: workflow_dispatch
-# env:
-#   AWS_REGION: us-east-1
-#   ECR_REPOSITORY: vprofileapp
-#   EKS_CLUSTER: vprofile-eks
-
-# jobs:
-#   Testing:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Code checkout
-#         uses: actions/checkout@v4
-
-#       - name: Maven test
-#         run: mvn test
-
-#       - name: Checkstyle
-#         run: mvn checkstyle:checkstyle
-
-#       # Setup java 11 to be default (sonar-scanner requirement as of 5.x)
-#       - name: Set Java 11
-#         uses: actions/setup-java@v3
-#         with:
-#          distribution: 'temurin' # See 'Supported distributions' for available options
-#          java-version: '11'
-
-#       # Setup sonar-scanner
-#       - name: Setup SonarQube
-#         uses: warchant/setup-sonar-scanner@v7
-
-#       # Run sonar-scanner
-#       - name: SonarQube Scan
-#         run: sonar-scanner
-#            -Dsonar.host.url=${{ secrets.SONAR_URL }}
-#            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-#            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-#            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-#            -Dsonar.sources=src/
-#            -Dsonar.junit.reportsPath=target/surefire-reports/
-#            -Dsonar.jacoco.reportsPath=target/jacoco.exec
-#            -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
-#            -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
-
-#       # Check the Quality Gate status.
-#       # - name: SonarQube Quality Gate check
-#       #   id: sonarqube-quality-gate-check
-#       #   uses: sonarsource/sonarqube-quality-gate-action@master
-#       #   # Force to fail step after specific time.
-#       #   timeout-minutes: 5
-#       #   env:
-#       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#       #     SONAR_HOST_URL: ${{ secrets.SONAR_URL }} #OPTIONAL
-
-#   BUILD_AND_PUBLISH:
-#     needs: Testing
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Code checkout
-#         uses: actions/checkout@v4
-
-#       - name: Build & Upload image to ECR
-#         uses: appleboy/docker-ecr-action@master
-#         with:
-#          access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          registry: ${{ secrets.REGISTRY }}
-#          repo: ${{ env.ECR_REPOSITORY }}
-#          region: ${{ env.AWS_REGION }}
-#          tags: latest,${{ github.run_number }}
-#          daemon_off: false
-#          dockerfile: ./Dockerfile
-#          context: ./
-
 name: vprofile actions
 on: workflow_dispatch
 env:
@@ -92,30 +18,39 @@ jobs:
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
 
+      # Setup java 11 to be default (sonar-scanner requirement as of 5.x)
       - name: Set Java 11
         uses: actions/setup-java@v3
         with:
-          distribution: "temurin"
+          distribution: "temurin" # See 'Supported distributions' for available options
           java-version: "11"
 
+      # Setup sonar-scanner
       - name: Setup SonarQube
-        uses: SonarSource/sonarqube-scan-action@v1.0.0
-        env:
-          SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        uses: warchant/setup-sonar-scanner@v7
 
+      # Run sonar-scanner
       - name: SonarQube Scan
-        run: |
-          sonar-scanner \
-            -Dsonar.host.url=${{ secrets.SONAR_URL }} \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-            -Dsonar.sources=src/ \
-            -Dsonar.junit.reportsPath=target/surefire-reports/ \
-            -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-            -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
-            -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
+        run: sonar-scanner
+          -Dsonar.host.url=${{ secrets.SONAR_URL }}
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+          -Dsonar.sources=src/
+          -Dsonar.junit.reportsPath=target/surefire-reports/
+          -Dsonar.jacoco.reportsPath=target/jacoco.exec
+          -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
+          -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
+
+      # Check the Quality Gate status.
+      # - name: SonarQube Quality Gate check
+      #   id: sonarqube-quality-gate-check
+      #   uses: sonarsource/sonarqube-quality-gate-action@master
+      #   # Force to fail step after specific time.
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_URL }} #OPTIONAL
 
   BUILD_AND_PUBLISH:
     needs: Testing
@@ -123,6 +58,19 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
+
+      # - name: Build & Upload image to ECR
+      #   uses: appleboy/docker-ecr-action@master
+      #   with:
+      #    access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #    secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #    registry: ${{ secrets.REGISTRY }}
+      #    repo: ${{ env.ECR_REPOSITORY }}
+      #    region: ${{ env.AWS_REGION }}
+      #    tags: latest,${{ github.run_number }}
+      #    daemon_off: false
+      #    dockerfile: ./Dockerfile
+      #    context: ./
 
       - name: Build & Upload image to ECR
         uses: appleboy/docker-ecr-action@master
@@ -136,3 +84,5 @@ jobs:
           daemon_off: false
           dockerfile: ./Dockerfile
           context: ./
+          build-args: |
+            BASE_IMAGE=tomcat:9.0.54-jre11
