--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,48 @@ jobs:
             BASE_IMAGE=tomcat:9.0.54-jre11
 
   # Job-3: Deploy To EKS
+  # DeployToEKS:
+  #   needs: BUILD_AND_PUBLISH
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Code checkout
+  #       uses: actions/checkout@v4
+
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ env.AWS_REGION }}
+
+  #     - name: Get Kube config file
+  #       run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+
+  #     - name: Print config file
+  #       run: cat ~/.kube/config
+
+  #     - name: Login to ECR
+  #       run: |
+  #         kubectl create secret docker-registry regcred
+  #           --docker-server=${{ secrets.REGISTRY }}
+  #           --docker-username=gitops
+  #           --docker-password=${{ secrets.DOCKER_PASSWORD }}
+
+  #       # run: kubectl create secret docker-registry regcred --docker-server=${{ secrets.REGISTRY }} --docker-username=gitops  --docker-password=$(aws ecr Gitops123$)
+
+  #     - name: Deploy Helm
+  #       uses: bitovi/github-actions-deploy-eks-helm@v1.2.8
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ env.AWS_REGION }}
+  #         cluster-name: ${{ env.EKS_CLUSTER }}
+  #         #config-files: .github/values/dev.yaml
+  #         chart-path: helm/vprofilecharts
+  #         namespace: default
+  #         values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
+  #         name: vprofile-stack
+
   DeployToEKS:
     needs: BUILD_AND_PUBLISH
     runs-on: ubuntu-latest
@@ -88,23 +130,7 @@ jobs:
         run: cat ~/.kube/config
 
       - name: Login to ECR
-        run: |
-          kubectl create secret docker-registry regcred 
-            --docker-server=${{ secrets.REGISTRY }} 
-            --docker-username=gitops 
-            --docker-password=${{ secrets.DOCKER_PASSWORD }} 
-
-        # run: kubectl create secret docker-registry regcred --docker-server=${{ secrets.REGISTRY }} --docker-username=gitops  --docker-password=$(aws ecr Gitops123$)
+        run: kubectl create secret docker-registry regcred --docker-server=${{ secrets.REGISTRY }} --docker-username=gitops --docker-password=${{ secrets.DOCKER_PASSWORD }} --docker-email=gitops@example.com
 
       - name: Deploy Helm
         uses: bitovi/github-actions-deploy-eks-helm@v1.2.8
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-          cluster-name: ${{ env.EKS_CLUSTER }}
-          #config-files: .github/values/dev.yaml
-          chart-path: helm/vprofilecharts
-          namespace: default
-          values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
-          name: vprofile-stack
