--- a/helm/vprofilecharts/templates/vproappdep.yml
+++ b/helm/vprofilecharts/templates/vproappdep.yml
@@ -15,15 +15,21 @@ spec:
         app: vproapp
     spec:
       containers:
-      - name: vproapp
-        image: {{ .Values.appimage}}: {{ .Values.apptag}}
-        ports:
-        - name: vproapp-port
-          containerPort: 8080
+        - name: vproapp
+          image: "{{ .Values.appimage }}:{{ .Values.apptag }}"
+          ports:
+            - name: vproapp-port
+              containerPort: 8080
       initContainers:
-      - name: init-mydb
-        image: busybox
-        command: ['sh', '-c', 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
-      - name: init-memcache
-        image: busybox
-        command: ['sh', '-c', 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
+        - name: init-mydb
+          image: busybox
+          command:
+            - "sh"
+            - "-c"
+            - "until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;"
+        - name: init-memcache
+          image: busybox
+          command:
+            - "sh"
+            - "-c"
+            - "until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;"
