--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -239,6 +239,134 @@
 #           values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
 #           name: vprofile-stack
 
+# name: vprofile actions
+
+# on: workflow_dispatch
+
+# env:
+#   AWS_REGION: us-east-1
+#   ECR_REPOSITORY: vprofileapp
+#   EKS_CLUSTER: vprofile-eks
+
+# jobs:
+#   # Job-1: Testing
+#   Testing:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Code checkout
+#         uses: actions/checkout@v4
+#         with:
+#           submodules: true
+#           fetch-depth: 0
+
+#       - name: Set Java 11
+#         uses: actions/setup-java@v3
+#         with:
+#           distribution: "temurin"
+#           java-version: "11"
+
+#       - name: Maven test
+#         run: mvn test
+
+#       - name: Checkstyle
+#         run: mvn checkstyle:checkstyle
+
+#       - name: Setup SonarQube
+#         uses: warchant/setup-sonar-scanner@v7
+
+#       - name: SonarQube Scan
+#         run: |
+#           sonar-scanner \
+#             -Dsonar.host.url=${{ secrets.SONAR_URL }} \
+#             -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+#             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
+#             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+#             -Dsonar.sources=src/ \
+#             -Dsonar.junit.reportsPath=target/surefire-reports/ \
+#             -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+#             -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
+#             -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
+
+#   # Job-2: Build and Publish
+#   BUILD_AND_PUBLISH:
+#     needs: Testing
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Code checkout
+#         uses: actions/checkout@v4
+
+#       - name: Build & Upload image to ECR
+#         uses: appleboy/docker-ecr-action@master
+#         with:
+#           access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           registry: ${{ secrets.REGISTRY }}
+#           repo: ${{ env.ECR_REPOSITORY }}
+#           region: ${{ env.AWS_REGION }}
+#           tags: latest,${{ github.run_number }}
+#           daemon_off: false
+#           dockerfile: ./Dockerfile
+#           context: ./
+#           build-args: |
+#             BASE_IMAGE=tomcat:9.0.54-jre11
+
+#   # Job-3: Deploy To EKS
+#   DeployToEKS:
+#     needs: BUILD_AND_PUBLISH
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Code checkout
+#         uses: actions/checkout@v4
+
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ env.AWS_REGION }}
+
+#       - name: Get Kube config file
+#         run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+
+#       - name: Verify Ingress Controller
+#         run: |
+#           if ! kubectl get svc -n ingress-nginx ingress-nginx-controller-admission; then
+#             echo "Ingress Controller admission webhook not found!" && exit 1
+#           fi
+
+#       - name: Login to ECR
+#         run: |
+#           if ! kubectl get secret regcred >/dev/null 2>&1; then
+#             kubectl create secret docker-registry regcred \
+#               --docker-server=${{ secrets.REGISTRY }} \
+#               --docker-username=${{ secrets.AWS_USER_NAME }} \
+#               --docker-password=${{ secrets.REGISTRY_PASSWORD }}
+#           else
+#             echo "ECR secret already exists. Skipping login."
+#           fi
+
+#       - name: Deploy Helm
+#         uses: bitovi/github-actions-deploy-eks-helm@v1.2.8
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ env.AWS_REGION }}
+#           cluster-name: ${{ env.EKS_CLUSTER }}
+#           chart-path: helm/vprofilecharts
+#           namespace: default
+#           values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
+#           name: vprofile-stack
+
+#       - name: Check Helm Deployment Status
+#         run: |
+#           helm status vprofile-stack -n default
+#           if [ $? -ne 0 ]; then
+#             echo "Helm deployment failed! Checking pods..."
+#             kubectl get pods -A
+#             kubectl describe pod -n ingress-nginx
+#             exit 1
+#           fi
+
 name: vprofile actions
 
 on: workflow_dispatch
@@ -255,21 +383,18 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 0
-
-      - name: Set Java 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: "temurin"
-          java-version: "11"
 
       - name: Maven test
         run: mvn test
 
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
+
+      - name: Set Java 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: "temurin"
+          java-version: "11"
 
       - name: Setup SonarQube
         uses: warchant/setup-sonar-scanner@v7
@@ -328,11 +453,16 @@ jobs:
       - name: Get Kube config file
         run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
 
-      - name: Verify Ingress Controller
+      - name: Check Ingress Controller Status
         run: |
-          if ! kubectl get svc -n ingress-nginx ingress-nginx-controller-admission; then
-            echo "Ingress Controller admission webhook not found!" && exit 1
-          fi
+          echo "Checking Ingress Controller readiness..."
+          kubectl wait --namespace ingress-nginx \
+            --for=condition=ready pod \
+            --selector=app.kubernetes.io/component=controller \
+            --timeout=180s
+
+          echo "Checking Ingress Admission Webhook endpoints..."
+          kubectl get endpoints ingress-nginx-controller-admission -n ingress-nginx
 
       - name: Login to ECR
         run: |
@@ -356,14 +486,3 @@ jobs:
           namespace: default
           values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
           name: vprofile-stack
-
-      - name: Check Helm Deployment Status
-        run: |
-          helm status vprofile-stack -n default
-          if [ $? -ne 0 ]; then
-            echo "Helm deployment failed! Checking pods..."
-            kubectl get pods -A
-            kubectl describe pod -n ingress-nginx
-            exit 1
-          fi
-
